Updated with pip version of transmart api and added use of formatting function for observations

--- a/EXERCISE TranSMART REST API V2 (2017).ipynb
+++ b/EXERCISE TranSMART REST API V2 (2017).ipynb
@@ -11,7 +11,7 @@
    "outputs": [],
    "source": [
     "import getpass\n",
-    "from transmart_api import TransmartApi\n",
+    "from transmart import TransmartApi\n",
     "\n",
     "api = TransmartApi(\n",
     "    host = 'http://transmart-test.thehyve.net',\n",
@@ -26,17 +26,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "import pandas as pd\n",
     "from pandas.io.json import json_normalize\n",
     "\n",
-    "pandas.set_option('max_colwidth', 1000)\n",
-    "pandas.set_option(\"display.max_rows\",100)"
+    "pd.set_option('max_colwidth', 1000)\n",
+    "pd.set_option(\"display.max_rows\",100)"
    ]
   },
   {
@@ -63,10 +63,10 @@
    },
    "outputs": [],
    "source": [
-    "# study_id = 'EHR'\n",
-    "study_id = None\n",
-    "patient_set_id = 28733\n",
-    "# patient_set_id = None"
+    "study_id = 'TRAINING'\n",
+    "patient_set_id = None\n",
+    "# study_id = None\n",
+    "# patient_set_id = 28733"
    ]
   },
   {
@@ -75,7 +75,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -107,6 +108,19 @@
    "outputs": [],
    "source": [
     "json_normalize(obs['cells'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "json_normalize(api.format_observations(obs))"
    ]
   },
   {
