Update copyright info

--- a/EXERCISE 3 - pathways.ipynb
+++ b/EXERCISE 3 - pathways.ipynb
@@ -10,7 +10,7 @@
     "<img style=\"float: right;\" src=\"files/thehyve_logo.png\">\n",
     "# Pathway analysis\n",
     "---------------\n",
-    "Copyright (c) 2015 The Hyve B.V. This notebook is licensed under the GNU General Public License, version 3. Authors: Ruslan Forostianov, Pieter Lukasse.\n",
+    "Copyright (c) 2015-2017 The Hyve B.V. This notebook is licensed under the GNU General Public License, version 3. Authors: Ruslan Forostianov, Pieter Lukasse, Ward Weistra.\n",
     "\n",
     "Make sure to have protobuf installed: `pip install protobuf`"
    ]
